--- a/app/views/upload/_anlage_zuordnen.html.erb
+++ b/app/views/upload/_anlage_zuordnen.html.erb
@@ -1,11 +1,11 @@
 <div class="row">
-  <div class="col-sm-10">
+  <div class="col-xs-10">
     <%= form_tag({action: :save_zuordnung}, multipart: true, class: "form-horizontal") do %>
       <div class="form-group">
         
-        <label for="anlage" class="col-sm-3 control-label"><code><%= synonym.synonym %></code></label>
+        <label for="anlage" class="col-xs-3 control-label"><code><%= synonym.synonym %></code></label>
         
-        <div class="col-sm-9">
+        <div class="col-xs-9">
           <%= select_tag :anlage, options_for_select(@all_anlagen), class: "form-control" %>
           <%= hidden_field_tag 'synonym', synonym.id %>
           <%= submit_tag "Zuordnung vornehmen" %>
@@ -14,7 +14,7 @@
       </div>
     <% end %>
   </div>
-  <div class="col-sm-2">
+  <div class="col-xs-2">
     <button class="btn btn-success" data-toggle="modal" data-target="#anlagenModal">Neue Atomanlage</button>
   </div>
   
