--- a/app/views/anlagen/index.html.erb
+++ b/app/views/anlagen/index.html.erb
@@ -1,11 +1,13 @@
-<h1>Listing anlagen</h1>
+<div class="btn-group header-buttons">
+  <%= link_to 'Neue Atomanlage', new_anlage_path, class: "btn btn-success" %>
+</div>
+
+<h1>Atomanlagen</h1>
 
 <table class="table table-striped">
   <thead>
     <tr>
       <th>Name</th>
-      <th>Adresse</th>
-      <th>Plz</th>
       <th>Ort</th>
       <th>Beschreibung</th>
       <th colspan="3"></th>
@@ -15,19 +17,13 @@
   <tbody>
     <% @anlagen.each do |anlage| %>
       <tr>
-        <td><%= anlage.name %></td>
-        <td><%= anlage.adresse %></td>
-        <td><%= anlage.plz %></td>
+        <td><%= link_to anlage.name, anlage %></td>
         <td><%= anlage.ort %></td>
         <td><%= anlage.beschreibung %></td>
         <td><%= link_to 'Show', anlage %></td>
-        <td><%= link_to 'Edit', edit_anlage_path(anlage) %></td>
-        <td><%= link_to 'Destroy', anlage, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Bearbeiten', edit_anlage_path(anlage) %></td>
+        <td><%= link_to 'Löschen', anlage, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Anlage', new_anlage_path %>
