--- a/app/views/transportabschnitte/_form.html.erb
+++ b/app/views/transportabschnitte/_form.html.erb
@@ -15,30 +15,30 @@
   
   <div class="row">
     <div class="col-sm-6">
-      <p>
-        <strong>Startdatum des Transportabschnittes:</strong>
-        <%= f.text_field :start_datum %>
-      </p>
-       <p>
-        <strong>Anfangsort:</strong>
-        <%= f.text_field  :start_ort %>
-      </p>
-      <div class="field">
-        Verkehrstraeger: 
-        <%= f.text_field  :verkehrstraeger %>
+      <div class="form-group">
+        <%= f.label :start_datum %>
+        <%= f.text_field :start_datum, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :start_ort %>
+        <%= f.text_field  :start_ort, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :verkehrstraeger %>
+        <%= f.text_field  :verkehrstraeger, class: "form-control" %>
       </div>
     </div>
     <div class="col-sm-6">
-      <p>
-        <strong>Ende des Transportabschnittes:</strong>
-        <%= f.text_field  :end_datum %>
-      </p>
-       <p>
-        <strong>Endort:</strong>
-        <%= f.text_field  :end_ort %>
-      </p>
-      <div class="field">
-        Transportfirma:
+      <div class="form-group">
+        <%= f.label :end_datum %>
+        <%= f.text_field  :end_datum, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :end_ort %>
+        <%= f.text_field  :end_ort, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :firma %>
         <%= collection_select(:transportabschnitt, :firma_id, Firma.all, :id, :name) %>
         <%= link_to "Neue Firma anlegen", new_firma_path %>
       </div>
