--- a/app/views/transportabschnitte/_show_abschnitt.html.erb
+++ b/app/views/transportabschnitte/_show_abschnitt.html.erb
@@ -1,30 +1,33 @@
 <div class="row">
-  <div class="col-sm-6">
-    <p>
-      <strong>Start des Transportabschnittes:</strong>
-      <%= abschnitt.start_datum %>
-      in <%= abschnitt.start_ort %>
-    </p>
+  <div class="col-xs-1">
+    <p>•</p>
   </div>
-  <div class="col-sm-6">
-    <p>
-      Ende des Transportabschnittes:
-      <%= abschnitt.end_datum %>
-      in <%= abschnitt.end_ort %>
-    </p>
+  <div class="col-xs-11">
+    <%= abschnitt.start_ort %> (<%= abschnitt.start_datum %>)
   </div>
 </div>
+
 <div class="row">
-  <div class="col-sm-6">
+  <div class="col-xs-1">
+    <p>|</p>
+  </div>
+  <div class="col-xs-11">
     <p>
       Verkehrsträger:
       <%= abschnitt.verkehrstraeger %>
     </p>
-  </div>
-  <div class="col-sm-6">
     <p>
       Transportfirma:
       <%= link_to abschnitt.firma.name, abschnitt.firma %>
     </p>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-xs-1">
+    <p>•</p>
+  </div>
+  <div class="col-xs-11">
+    <%= abschnitt.end_ort %> (<%= abschnitt.end_datum %>)
   </div>
 </div>
