Anlagen-Kategorien hinzugefuegt

--- a/app/views/anlagen/_form_modal.html.erb
+++ b/app/views/anlagen/_form_modal.html.erb
@@ -26,13 +26,17 @@
             <%= f.text_field :name, class: "form-control" %>
           </div>
           <div class="form-group">
-	    <%= f.label :ort, "Ort (optional)" %>
-	    <%= f.text_field :ort, class: "form-control" %>
-	  </div>
-	  <div class="form-group">
-	    <%= f.label :beschreibung, "Beschreibung (optional)" %>
-	    <%= f.text_area :beschreibung, class: "form-control" %>
-	  </div>
+            <%= f.label :ort, "Ort (optional)" %>
+            <%= f.text_field :ort, class: "form-control" %>
+          </div>
+          <div class="form-group">
+            <%= f.label :anlagen_kategorie %><br>
+            <%= collection_select(:anlage, :anlagen_kategorie_id, AnlagenKategorie.all, :id, :name, class: "form-control") %>
+          </div>
+	      <div class="form-group">
+	        <%= f.label :beschreibung, "Beschreibung (optional)" %>
+	        <%= f.text_area :beschreibung, class: "form-control" %>
+	      </div>
         </div>
     
         <div class="modal-footer">
