--- a/app/views/anlagen/show.html.erb
+++ b/app/views/anlagen/show.html.erb
@@ -25,6 +25,11 @@
       <strong>Ort:</strong>
       <%= @anlage.ort %>
     </p>
+    
+    <p>
+      <strong>Kategorie:</strong>
+      <%= @anlage.anlagen_kategorie %>
+    </p>
 
     <h3> Synonyme für die Anlage </h3>
 
