--- a/app/views/anlagen/_form.html.erb
+++ b/app/views/anlagen/_form.html.erb
@@ -36,6 +36,10 @@
         <%= f.label :ort %><br>
         <%= f.text_field :ort, class: "form-control" %>
       </div>
+      <div class="form-group">
+        <%= f.label :anlagen_kategorie %><br>
+        <%= collection_select(:anlage, :anlagen_kategorie_id, AnlagenKategorie.all, :id, :name, class: "form-control") %>
+      </div>
     </div>
     
     <div class="col-sm-5">
