--- a/app/views/transporte/_show_transport_grunddaten.html.erb
+++ b/app/views/transporte/_show_transport_grunddaten.html.erb
@@ -19,7 +19,7 @@
     
     <p>
       <strong>Stoff:</strong>
-      <%= @transport.stoff %>
+      <%= link_to @transport.stoff, @transport.stoff %>
     </p>
 
     
