--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,3 +16,8 @@
  *= depend_on_asset "layers.png"
  *= depend_on_asset "layers-2x.png"
  */
+
+#navigation_seitenleiste{
+  background-color: grey;
+  font-size: 80%;
+}
