--- a/app/views/anlagen/_form_modal.html.erb
+++ b/app/views/anlagen/_form_modal.html.erb
@@ -38,6 +38,8 @@
 	        <%= f.text_area :beschreibung, class: "form-control" %>
 	      </div>
         </div>
+        
+        <%= hidden_field_tag :synonym, @synonym %>
     
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Abbrechen</button>
