--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,8 @@
     </header>
     
     <% unless params[:controller] == "welcome" %>
-      <div class="col-sm-2" id="navigation_seitenleiste">   
+      <div class="col-sm-2" id="navigation_seitenleiste">  
+		<h2> Navigation </h2> 
         <%= render "layouts/side_navigation" %>
       </div>
     <% end %>
