--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   
     <%= render "layouts/navbar" %>
     
-    <% unless params[:controller] == "welcome" %>
+    <% unless true %>
       <div class="col-sm-2" id="navigation_seitenleiste">  
 		<h2> Navigation </h2> 
         <%= render "layouts/side_navigation" %>
