Stoff-Layout-Verbesserungen

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,16 +12,21 @@
     
     <% unless true %>
       <div class="col-sm-2" id="navigation_seitenleiste">  
-		<h2> Navigation </h2> 
+        <h2> Navigation </h2> 
         <%= render "layouts/side_navigation" %>
       </div>
-    <% end %>
-    
-    <div class="col-sm-9">
+      <div class="col-sm-9">
+        <div class="container">
+          <%= yield %>
+        </div>
+      </div>
+    <% else %>
       <div class="container">
         <%= yield %>
       </div>
-    </div>
+    <% end %>
+    
+    
     
   </body>
 </html>
