--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -9,3 +9,18 @@
 .btn:visited {
   color: white;
 }
+
+.gefahrentafel {
+  height: 9em;
+  width: 12em;
+  background-color: #fe9900;
+  border: 2px solid black;
+}
+
+.un-nummer, .gefahr-nummer {
+  border: 2px solid black;
+  height: 50%;
+  text-align: center;
+  font-size: 300%;
+  line-height: 1.2em;
+}
