--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -25,6 +25,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Daten-Bearbeitung <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><%= link_to "Atomanlagen", anlagen_path %></li>
+            <li><%= link_to "Radioaktive Stoffe", stoffe_path %></li>
             <li><%= link_to "Transportfirmen", firmen_path %></li>
             <li><%= link_to "Transporte", transporte_path %></li>
             <li><%= link_to "Beobachtungen", beobachtungen_path %></li>
