--- a/app/views/stoffe/index.html.erb
+++ b/app/views/stoffe/index.html.erb
@@ -1,31 +1,28 @@
-<h1>Listing stoffe</h1>
+<div class="btn-group header-buttons">
+  <%= link_to 'Neuen Stoff erstellen', new_stoff_path, class: "btn btn-success" %>
+</div>
 
-<table>
+<h1>Radioaktive Stoffe</h1>
+
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Bezeichnung</th>
-      <th>Beschreibung</th>
-      <th>Un nummer</th>
-      <th>Gefahr nummer</th>
-      <th colspan="3"></th>
+      <th>UN-Nummer</th>
+      <th>Gefahrnummer</th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @stoffe.each do |stoff| %>
       <tr>
-        <td><%= stoff.bezeichnung %></td>
-        <td><%= stoff.beschreibung %></td>
+        <td><%= link_to stoff.bezeichnung, stoff %></td>
         <td><%= stoff.un_nummer %></td>
         <td><%= stoff.gefahr_nummer %></td>
-        <td><%= link_to 'Show', stoff %></td>
-        <td><%= link_to 'Edit', edit_stoff_path(stoff) %></td>
-        <td><%= link_to 'Destroy', stoff, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Bearbeiten', edit_stoff_path(stoff) %></td>
+        <td><%= link_to 'Löschen', stoff, method: :delete, data: { confirm: 'Willst du den Stoff wirklich löschen?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Stoff', new_stoff_path %>
