--- a/app/views/transporte/_tabelle.html.erb
+++ b/app/views/transporte/_tabelle.html.erb
@@ -19,7 +19,7 @@
           <td><%= transport.datum %></td>
           <td><%= link_to transport.start_anlage, transport.start_anlage %></td>
           <td><%= link_to transport.ziel_anlage, transport.ziel_anlage %></td>
-          <td><%= transport.stoff %></td>
+          <td><%= link_to transport.stoff, transport.stoff %></td>
           <td><%= link_to 'Show', transport %></td>
           <td><%= link_to 'Bearbeiten', edit_transport_path(transport) %></td>
           <td><%= link_to 'Löschen', transport, method: :delete, data: { confirm: 'Are you sure?' } %></td>
