--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -42,6 +42,7 @@
       
       <ul class="nav navbar-nav navbar-right">
         <button type="button" class="btn btn-primary navbar-btn">Anmelden</button>
+        <%= link_to "Registrieren", signup_path, class: "btn btn-success navbar-btn" %>
       </ul>
       
     </div>
