--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -41,7 +41,7 @@
       </ul>
       
       <ul class="nav navbar-nav navbar-right">
-        <button type="button" class="btn btn-primary navbar-btn">Anmelden</button>
+        <%= link_to "Anmelden", login_path, class: "btn btn-primary navbar-btn" %>
         <%= link_to "Registrieren", signup_path, class: "btn btn-success navbar-btn" %>
       </ul>
       
