--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -41,8 +41,19 @@
       </ul>
       
       <ul class="nav navbar-nav navbar-right">
-        <%= link_to "Anmelden", login_path, class: "btn btn-primary navbar-btn" %>
-        <%= link_to "Registrieren", signup_path, class: "btn btn-success navbar-btn" %>
+        <% if logged_in? %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.name %><b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Profil", current_user %></li>
+              <li class="divider"></li>
+              <li><%= link_to "Abmelden", logout_path, method: "delete" %></li>
+            </ul>
+          </li>
+        <% else %>
+          <%= link_to "Anmelden", login_path, class: "btn btn-primary navbar-btn" %>
+          <%= link_to "Registrieren", signup_path, class: "btn btn-success navbar-btn" %>
+        <% end %>
       </ul>
       
     </div>
