--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -43,16 +43,21 @@
       <ul class="nav navbar-nav navbar-right">
         <% if logged_in? %>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.name %><b class="caret"></b></a>
+            <button type="button" class="btn btn-default navbar-btn dropdown-toggle" data-toggle="dropdown">
+              <%= current_user.name %> <span class="caret"></span>
+            </button>
             <ul class="dropdown-menu">
               <li><%= link_to "Profil", current_user %></li>
+              <li><%= link_to "Einstellungen", edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li><%= link_to "Abmelden", logout_path, method: "delete" %></li>
             </ul>
           </li>
         <% else %>
-          <%= link_to "Anmelden", login_path, class: "btn btn-primary navbar-btn" %>
-          <%= link_to "Registrieren", signup_path, class: "btn btn-success navbar-btn" %>
+          <div class="btn-group">
+            <%= link_to "Anmelden", login_path, class: "btn btn-primary navbar-btn" %>
+            <%= link_to "Registrieren", signup_path, class: "btn btn-success navbar-btn" %>
+          </div>
         <% end %>
       </ul>
       
