--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -42,6 +42,7 @@
       
       <ul class="nav navbar-nav navbar-right">
         <% if logged_in? %>
+          <li><%= link_to "Benutzerverwaltung", users_path %></li>
           <li class="dropdown">
             <button type="button" class="btn btn-default navbar-btn dropdown-toggle" data-toggle="dropdown">
               <%= current_user.name %> <span class="caret"></span>
